Altera Layout view Tela_IHM

--- a/IHM/IHM/App.xaml
+++ b/IHM/IHM/App.xaml
@@ -9,5 +9,14 @@
         <ResourceDictionary>
             <Color x:Key="corDigitalInput">Gray</Color>
         </ResourceDictionary>
+        <ResourceDictionary>
+            <Color x:Key="corLabelTransistorOutput">White</Color>
+        </ResourceDictionary>
+        <ResourceDictionary>
+            <Color x:Key="corLabelInputDigital">White</Color>
+        </ResourceDictionary>
+        <ResourceDictionary>
+            <Color x:Key="corLabelAnalogicaInput">White</Color>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
